style: contact us wrong padding issue

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -9,7 +9,6 @@
 .cSection {
     width: 50%;
     height: 100%;
-    padding: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
